# ogl

./: CMakeLists.txt
src/: ShaderUtils.h  controls.h  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
